--- a/diplom/src/scss/index.css
+++ b/diplom/src/scss/index.css
@@ -339,12 +339,14 @@ input{
   justify-content: center;
   margin-bottom: 150px;
 }
+
 .wrapper_testimonials_1{
   max-width: 1200px;
 
 }
 .testimonials_img{
-width: 50%;
+  width: 100%;
+  height: 100%;
 }
 .h2_testimonials{
   font-family: 'Cardo', sans-serif;
@@ -378,6 +380,11 @@ width: 50%;
 .img_testimonials{
   display: flex;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.slick-initialized .slick-slide{
+  display: flex;
 
 }
 .slider{
@@ -389,11 +396,11 @@ width: 50%;
 .slick-list{
   overflow: hidden;
 }
-
 .slick-dots{
-display: flex;
-  align-items: center;
-  justify-content: center;
+  display: flex;
+  position: absolute;
+  left: 45%;
+  background: white;
 
 
 }
@@ -541,6 +548,9 @@ font-size: 0;
 }
 .icons_footer{
   padding-bottom: 70px;
+}
+.white-text{
+  color: white;
 }
 
 @media (max-width: 1200px) {
@@ -722,16 +732,17 @@ font-size: 0;
   .h2_testimonials{
     font-family: 'Cardo', sans-serif;
     font-style: italic;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 36px;
     text-transform: capitalize;
     color: #FFFFFF;
+
     text-align: left;
     padding-bottom: 20px;
     width: 250px;
   }
   .testimonials_description{
-    padding-left: 90px;
+    padding: 0 15px 0 50px;
     height: 250px;
     width: 50%;
   }
@@ -842,19 +853,25 @@ font-size: 0;
   .h2_testimonials{
     font-family: 'Cardo', sans-serif;
     font-style: italic;
-    font-size: 25px;
+    font-size: 24px;
     line-height: 36px;
     text-transform: capitalize;
     color: #FFFFFF;
     margin: 0 auto;
     text-align: center;
-    padding: 0 0 20px;
+    padding: 20px 0 10px;
     width: 250px;
   }
   .testimonials_description{
-    padding-left: 0;
+    padding: 0 15px;
     height: 250px;
     width: 50%;
+    margin: 0 auto;
+  }
+  .p_testimonials{
+    font-size: 12px;
+    text-align: center;
+    margin: 0 auto;
   }
   .ul-nav__li{
     font-weight: 700;
@@ -900,8 +917,18 @@ font-size: 0;
     width: 80%;
     height: 80%;
   }
+  .slick-initialized .slick-slide{
+    display: block;
+
+  }
+  .slick-dots{
+    display: flex;
+    position: absolute;
+    left: 37%;
+    background: white;
 
 
+  }
 
 
 
@@ -933,6 +960,7 @@ font-size: 0;
   .h1{
     font-size: 36px;
     line-height: 42px;
+    padding: 230px 5px 0;
   }
   .p{
     font-size: 14px;
@@ -949,6 +977,15 @@ font-size: 0;
     border: none;
     background: #FF4343;
     cursor: pointer;
+    width: 100%;
+  }
+  .wrapper_features{
+    margin-top: 50px;
+  }
+  .features_item{
+
+    padding: 0 15px 50px;
+
   }
   .h3_features{
     font-size: 18px;
@@ -966,10 +1003,12 @@ font-size: 0;
   .p_teammate_profession{
     font-size: 14px;
     line-height: 16px;
+    padding-top: 7px;
   }
   .p_teammate_description{
     font-size: 14px;
     line-height: 16px;
+    padding-top: 40px;
   }
   .h3_download{
     font-size: 24px;
@@ -997,7 +1036,7 @@ font-size: 0;
   .h5_about_footer{
     font-size: 14px;
     line-height: 16px;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
   }
   .p_about_footer{
     font-size: 14px;
@@ -1026,9 +1065,15 @@ font-size: 0;
     width: 250px;
   }
   .testimonials_description{
-    height: 250px;
+    height: 350px;
     width: 100%;
     padding: 15px;
+  }
+  .p_testimonials{
+    font-size: 12px;
+    text-align: center;
+    margin: 0 auto;
+
   }
   .ul-nav__li{
     font-weight: 700;
@@ -1098,6 +1143,7 @@ font-size: 0;
   }
   .wrapper_our-team{
     flex-direction: column;
+    padding: 0 15px;
   }
   .teammate{
     width: 100%;
@@ -1132,16 +1178,19 @@ font-size: 0;
   .p_download{
     font-size: 13px;
     line-height: 15px;
+    margin-bottom: 15px;
   }
   .a_download{
     font-weight: 900;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 28px;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
     background: #FF4343;
     padding: 26px 30px;
+    display: block;
+    width: 100%;
   }
   .h5_second_footer{
     font-size: 14px;
@@ -1151,6 +1200,44 @@ font-size: 0;
   .img_features{
     width: 60px;
     height: 60px;
+  }
+  .slick-initialized .slick-slide{
+    display: block;
+
+  }
+  .slick-dots{
+    display: flex;
+    position: absolute;
+    left: 37%;
+    background: white;
+
+
+  }
+  .slick-dots button{
+    font-size: 0;
+    width: 10px;
+    height: 10px;
+    background: white;
+    border: 1px solid #7E5D6F;
+    border-radius: 50%;
+  }
+  .slick-active button{
+    background: #7E5D6F;
+  }
+  .wrapper_download  {
+    margin-bottom: 45px;
+  }
+  .p_location_footer{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
+    text-transform: capitalize;
+    color: #FFFFFF;
+    padding-bottom: 70px;
+  }
+  .icons_footer{
+    padding-bottom: 70px;
   }
 
 
